[gd_scene load_steps=2 format=3 uid="uid://btp2myjggfb0"]

[ext_resource type="Script" path="res://Scripts/General/hitbox.gd" id="1_fnv4g"]

[node name="Hitbox" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_fnv4g")

[node name="Cooldown" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
